# findingFloatMatrixMultiplicationAlgorithmsCUDA

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  backpropCUDA.cpp  backpropCUDA.cu  checkSolution.py  cmake_install.cmake  differenceMap.py  dims.npy  save-commands.json  searchForMatrixMultiplicationAlgorithmlg.py  searchForMatrixMultiplicationAlgorithms.py  setDims.py  setNAndP.py  solution.npy  solution_n3_p23.npy  solution_n3_p24.npy  solution_n3_p25.npy  solution_n3_p26.npy  solution_n3_p27.npy  solution_n4_p55.npy  test.py  trash.py
